force-app/main/default/objects/Patient_Vitals__c/Patient_Vitals__c.object-meta.xml
<CustomObject>
    <label>Patient Vitals</label>
    <pluralLabel>Patient Vitals</pluralLabel>
    <nameField>
        <label>Vitals Record</label>
        <type>AutoNumber</type>
        <displayFormat>PV-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>