force-app/main/default/objects/Patient_Vitals__c/fields/BP_Diastolic__c.field-meta.xml
<CustomField>
    <fullName>BP_Diastolic__c</fullName>
    <label>BP Diastolic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>