force-app/main/default/objects/Patient_Vitals__c/fields/BP_Systolic__c.field-meta.xml
<CustomField>
    <fullName>BP_Systolic__c</fullName>
    <label>BP Systolic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>