force-app/main/default/objects/Patient_Vitals__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>