force-app/main/default/objects/Patient_Vitals__c/fields/Device_Reading_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Reading_Id__c</fullName>
    <label>Device Reading Id</label>
    <length>100</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <type>Text</type>
</CustomField>