force-app/main/default/objects/Patient_Vitals__c/fields/Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>Heart_Rate__c</fullName>
    <label>Heart Rate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>