force-app/main/default/objects/Patient_Vitals__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <label>Patient State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>