force-app/main/default/objects/Patient_Vitals__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Reading Timestamp</label>

    <type>DateTime</type>
</CustomField>